@@ -1,6 +1,8 @@
 2006-12-03 Kimmo
  PATCH: [ 1607084 ] Manual: Add new FAQ about missing runtime files
   Manual: Faq.xml
+ Remove unnecessary <qandadiv> from q&a entry added in previous patch
+  Manual: Faq.xml
 
 2006-12-01 Kimmo
  PATCH: [ 1605562 ] Manual: Add FAQ items about archive support installation
